<resources>
    <string name="app_name">電卓</string>

    <!--ナンバー-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>

    <!--特別なボタン-->
    <string name="all_clear">AC</string>
    <string name="clear">C</string>
    <string name="plus_minus_switch">+/-</string>
    <string name="percent">%</string>

    <!--演算子ボタン-->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">×</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="open_source_license">オープンソースライセンス</string>
    <string name="open_menu">メニューを開く</string>
    <string name="navigate_back">戻る</string>
</resources>
